login btn added

--- a/styles/index.css
+++ b/styles/index.css
@@ -304,8 +304,9 @@ cursor: pointer;
 
 #middle_tab_section {
   /* border: 1px solid red; */
-  /* height:600px; */
-  /* margin-bottom: 155px; */
+background-color: #fff;
+  position: sticky;
+  top: 0;
 }
 
 #middle_nav_bar {
